--- a/world-map/src/styles.css
+++ b/world-map/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+html, body {
+    font-family: 'Inter', "Helvetica Neue", sans-serif;
+    background-color: #ECF0F1;
+    height: 100%;
+}
